--- a/include/Silicon.tex
+++ b/include/Silicon.tex
@@ -183,6 +183,7 @@ energy loss near the minimum of the Bethe-Bloch formula are considered
 as minimum ionising particles (MIPs).
 
 \subsection{Energy-loss spectrum in silicon}
+\label{sec:SiliconEnergyLossSpectrum}
 Ionisation is also subject to statistical fluctuations and
 \cref{eq:BetheBloch} gives its average value. It can be described by a
 probability density function called \textit{straggling function} and
