[CLIC] intermediate commit

--- a/include/CLIC.tex
+++ b/include/CLIC.tex
@@ -482,6 +482,10 @@ probability increases by $\sim$35\% due to the increased material.
   \label{fig:performance}
 \end{figure}
 
+
+\section{Summary}
+\label{sec:summary_CLIC}
+
 The CLIC detector model for simulations is under development with the
 requirements set by the precision physics to be measured. With these
 requirements, it allows for identification of beauty and charm quarks
