[CLIC] intermediate commit

--- a/include/CLIC.tex
+++ b/include/CLIC.tex
@@ -26,8 +26,9 @@ with center-of-mass energies from $380\,\gev$ up to $3\,\tev$.
 In this chapter, we will briefly discuss the standard model of
 particle physics and attempt to understand how CLIC can determine more
 precisely the properties of the Higgs boson. Subsequently the CLIC
-detector and its components are described. The focus is put on the
-vertex detector, its requirements and its flavour-tagging performance.
+accelerator, detector and its components are described. The focus is
+put on the vertex detector, its requirements and its flavour-tagging
+performance.
 
 \section{Physics potential at CLIC} 
 
@@ -183,7 +184,7 @@ beam with a series of Power Extraction and Transfer Systems (PETS).
 
 
 \cref{tab:NominalMachineParams} summarises the nominal beam parameters
-for the $3\,\tev$ CLIC and $14\,\tev$ LHC. An instantaneous luminosity
+for the $3\,\tev$ CLIC and $13\,\tev$ LHC. An instantaneous luminosity
 $\mathcal{L}$ of a few $10^{34}$~\inversecmsquaredsec insures a
 sufficient amount of statistical samples collected in a reasonable
 amount of time. The instantaneous luminosity depends on the transverse
